--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="call-us__form">
                 <input class='call-us__form-input' type="text" placeholder="Ваш телефон">
-                <button class='call-us__form-btn call-btn' type='submit'>Заказать звонок</button>
+                <button class='call-us__form-btn' type='submit'>Заказать звонок</button>
                 <label class='call-us__form-label' for="aply">
                     <input class='call-us__form-check' type="checkbox" name="aply" id="aply">
                     Я согласен на обработку персональных данных
@@ -425,7 +425,7 @@
         </div>
     </div>
     
-
+    
 
 
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
