50% media mobile for test

--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>  
+                <div class="swiper-button-prev swiper-arrow"></div>
+                <div class="swiper-button-next swiper-arrow"></div>  
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
