--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                         <li class='nav__link'>FAQ</li>
                     </ul>
                 </nav>
+                <div class="burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
             <div class="header__content">
                 <h1 class="header__content-h1">Придумайте что отправить</h1>
